--- a/{{cookiecutter.project_shortname}}/pyproject.toml
+++ b/{{cookiecutter.project_shortname}}/pyproject.toml
@@ -1,8 +1,8 @@
 [tool.poetry]
-name = "{{cookiecutter.project_shortname}}"
+name = "{{ cookiecutter.project_shortname }}"
 version = "0.0.1"
 description = "{{ cookiecutter.description }}"
-authors = ["{{ cookiecutter.author_name }}"]
+authors = ["{{cookiecutter.author_name}} <{{cookiecutter.author_email}}>"]
 license = "{% set _license_identifiers = {'MIT License': 'MIT','BSD License': 'BSD','ISC License': 'ISC','Apache Software License 2.0': 'Apache-2.0','GNU General Public License v3': 'GPL-3.0','Not open source': ''} %}{{ _license_identifiers[cookiecutter.license] }}"
 readme = "README.md"
 
